# claud-os-victor

./: .gitignore  .gitmodules  README.md  setenv.sh
3rd/libarchive/vicos/lib/: libarchive.la  libarchive.so.13  libarchive.so.13.9.0
3rd/libarchive/vicos/lib/pkgconfig/: libarchive.pc
3rd/opencv/vicos/lib/: libopencv_calib3d.so.4.12.0  libopencv_core.so.4.12.0  libopencv_features2d.so.4.12.0  libopencv_flann.so.4.12.0  libopencv_highgui.so.4.12.0  libopencv_imgcodecs.so.4.12.0  libopencv_ml.so.4.12.0  libopencv_objdetect.so.4.12.0  libopencv_photo.so.4.12.0  libopencv_stitching.so.4.12.0  libopencv_video.so.4.12.0  libopencv_videoio.so.4.12.0
animProcess/src/cozmoAnim/faceDisplay/: faceInfoScreenManager.cpp
cloud/: .gitignore  CMakeLists.txt  Makefile
cloud/cloud/: gateway.go  main.go  tokens.go
cmake/: archive.cmake  license.cmake  vicos.oelinux.toolchain.cmake
coretech/common/robot/: array2d.h
engine/aiComponent/behaviorComponent/: sleepTracker.cpp
engine/aiComponent/behaviorComponent/behaviors/sleeping/: behaviorSleepCycle.cpp  behaviorSleeping.cpp
engine/components/: jdocsManager.cpp
platform/config/: CMakeLists.txt
platform/faultCodeDisplay/: faultCodeDisplay.cpp
platform/gpio/: gpio.c
platform/update-engine/: BUILD.in  CMakeLists.txt  build.sh  update-engine.cpp
platform/victorCrashReports/: tombstoneHooks.cpp
project/victor/: build-victor.sh
project/victor/scripts/: backtracewatcher.py
resources/assets/cladToFileMaps/: BackpackAnimationTriggerMap.json
robot/core/src/: lcd.c
robot/fixture/emmcdl/makebc/: meow
(+5 files in other folders)
